--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,9 +19,9 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=19,11
-Size=262,223
-Collapsed=1
+Pos=13,241
+Size=262,222
+Collapsed=0
 
 [Window][Light]
 Pos=1248,17
@@ -121,5 +121,15 @@ Collapsed=1
 [Window][Sponza]
 Pos=60,60
 Size=436,245
+Collapsed=0
+
+[Window][Cpu]
+Pos=60,60
+Size=120,131
+Collapsed=0
+
+[Window][Frustum]
+Pos=177,68
+Size=246,118
 Collapsed=0
 
