--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -181,7 +181,9 @@
     <ClCompile Include="ChiliException.cpp" />
     <ClCompile Include="ChiliTimer.cpp" />
     <ClCompile Include="ChiliXM.cpp" />
+    <ClCompile Include="Collision.cpp" />
     <ClCompile Include="CommonMath.cpp" />
+    <ClCompile Include="CpuClass.cpp" />
     <ClCompile Include="DepthStencil_Mask.cpp" />
     <ClCompile Include="DirectionLight.cpp" />
     <ClCompile Include="Drawable.cpp" />
@@ -189,6 +191,7 @@
     <ClCompile Include="DxgiInfoManager.cpp" />
     <ClCompile Include="ECS.cpp" />
     <ClCompile Include="ecsComponent.cpp" />
+    <ClCompile Include="Frustum.cpp" />
     <ClCompile Include="GDIPlusManager.cpp" />
     <ClCompile Include="GeometryScene.cpp" />
     <ClCompile Include="Graphics.cpp" />
@@ -240,11 +243,13 @@
     <ClInclude Include="ChiliTimer.h" />
     <ClInclude Include="ChiliWin.h" />
     <ClInclude Include="ChiliXM.h" />
+    <ClInclude Include="Collision.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="CommonMath.h" />
     <ClInclude Include="ConditionalNoexcept.h" />
     <ClInclude Include="Cone.h" />
     <ClInclude Include="ConstantBuffers.h" />
+    <ClInclude Include="CpuClass.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Cylinder.h" />
     <ClInclude Include="DepthStencil_Mask.h" />
@@ -255,6 +260,7 @@
     <ClInclude Include="ECS.hpp" />
     <ClInclude Include="ecsComponent.hpp" />
     <ClInclude Include="ecsSystem.hpp" />
+    <ClInclude Include="Frustum.h" />
     <ClInclude Include="GDIPlusManager.h" />
     <ClInclude Include="GeometryScene.h" />
     <ClInclude Include="Graphics.h" />
