change wrap angle

--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -19,12 +19,12 @@ Size=357,97
 Collapsed=0
 
 [Window][Camera]
-Pos=13,241
+Pos=22,215
 Size=262,222
 Collapsed=0
 
 [Window][Light]
-Pos=1248,17
+Pos=1300,26
 Size=288,351
 Collapsed=0
 
@@ -69,7 +69,7 @@ Size=294,201
 Collapsed=0
 
 [Window][Plane]
-Pos=1228,430
+Pos=1286,388
 Size=303,372
 Collapsed=0
 
@@ -129,7 +129,12 @@ Size=120,131
 Collapsed=0
 
 [Window][Frustum]
-Pos=187,37
-Size=319,247
+Pos=378,34
+Size=199,116
+Collapsed=0
+
+[Window][Game State]
+Pos=20,34
+Size=354,161
 Collapsed=0
 
